import java.time.Instant

plugins {
	id 'base'
	id 'java'
	id 'idea'
	id 'maven-publish'
	id 'net.neoforged.moddev'
	id "me.shedaniel.unified-publishing" version "0.1.+"
}

var ENV = System.getenv()
var CI = ENV.CI == "true"
var isLocal = !ENV.containsKey("GITHUB_RUN_NUMBER")

version = "${mod_version}-${isLocal ? "local.${Instant.now().epochSecond}" : "build.${ENV.GITHUB_RUN_NUMBER}"}"
group = project.maven_group
base.archivesName = project.archives_base_name

println("Building version: ${version}")

neoForge {
	enable {
		version = project.neoforge_version
		validateAccessTransformers = !CI
		disableRecompilation = CI
		validateAccessTransformers = false
		accessTransformers {
			publish(project.file('src/main/resources/META-INF/accesstransformer.cfg'))
		}

		interfaceInjectionData {
			from(file('interfaces.json'))
			publish(file('interfaces.json'))
		}

		runs {
			configureEach {
				logLevel = org.slf4j.event.Level.INFO
				systemProperty 'terminal.ansi', 'true'
			}

			client {
				ideName = 'Client'
				client()
				systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id

				if (ENV.MC_CLIENT_ARGS) {
					programArguments.addAll(ENV.MC_CLIENT_ARGS.split(' '))
				}

				jvmArguments.addAll("-XX:+IgnoreUnrecognizedVMOptions", "-XX:+AllowEnhancedClassRedefinition")
				gameDirectory = file 'runs/client'
			}

			server {
				ideName = 'Server'
				server()
				programArgument("--nogui")
				gameDirectory = file 'runs/server'
			}
		}

		mods {
			kubejs {
				sourceSet sourceSets.main
			}
		}
	}
}

compileJava {
	options.encoding = "UTF-8"
	options.release.set(25)
	options.compilerArgs << '-parameters' << '-Xmaxerrs' << '1000'
}

java {
	sourceCompatibility = targetCompatibility = '25'
	withSourcesJar()
	withJavadocJar()
}

tasks.withType(Javadoc).configureEach {
	options.addStringOption('Xdoclint:none', '-quiet')
}


dependencies {
	api("dev.latvian.mods:rhino:$rhino_version") { transitive(false) }

	// not updated to 26.1 yet
	/*compileOnly("dev.architectury:architectury-neoforge:$architectury_version")
	compileOnly("mezz.jei:jei-1.21.11-neoforge:$jei_version")
	compileOnly("me.shedaniel:RoughlyEnoughItems-neoforge:$rei_version")*/
	/*compileOnly("dev.emi:emi-neoforge:$emi_version+1.21.1:api")*/

	implementation(jarJar(implementation('dev.latvian.apps:tiny-java-server'))) {
		version {
			strictly "[$tiny_server_version,)"
			prefer "$tiny_server_version"
		}
	}

	implementation(jarJar(implementation("com.github.rtyley:animated-gif-lib-for-java"))) {
		version {
			strictly "[animated-gif-lib-$gif_lib_version,)"
			prefer "animated-gif-lib-$gif_lib_version"
		}
	}

	jarJar(implementation('dev.latvian.mods:better-advanced-tooltips')) {
		version {
			strictly "[$bat_version,)"
			prefer "$bat_version"
		}
	}
}

processResources {
	def toReplace = [
			"version"         : project.version,
			"rhino_version"   : project.rhino_version,
			"neoforge_version": project.neoforge_version,
			"jei_version"     : project.jei_version,
			"rei_version"     : project.rei_version,
			"emi_version"     : project.emi_version,
			"bat_version"     : project.bat_version,
	]

	println("[Process Resources] Replacing properties in resources: " + toReplace)

	inputs.properties toReplace
	filesMatching("META-INF/neoforge.mods.toml") {
		expand toReplace
	}
}

jar {
	manifest {
		attributes([
				"Specification-Title"     : project.mod_id,
				"Specification-Vendor"    : project.mod_author,
				"Specification-Version"   : "1",
				"Implementation-Title"    : project.name,
				"Implementation-Version"  : version,
				"Implementation-Vendor"   : project.mod_author,
				"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
		])
	}
}

publishing {
	publications {
		mavenNeoForge(MavenPublication) {
			artifactId = archives_base_name
			from components.java
		}
	}

	repositories {
		if (ENV.MAVEN_URL && ENV.MAVEN_USERNAME && ENV.MAVEN_TOKEN) {
			maven {
				url = ENV.MAVEN_URL
				credentials {
					username = ENV.MAVEN_USERNAME
					password = ENV.MAVEN_TOKEN
				}
			}
		}
	}
}

unifiedPublishing {
	project {
		releaseType = "${ENV.RELEASE_TYPE ?: 'release'}"
		gameVersions = Arrays.asList(rootProject.supported_versions.split(', '))
		gameLoaders = ["neoforge"]
		displayName = "$mod_name NeoForge $project.version"
		changelog = "https://kubejs.com/changelog?mc=${project.minecraft_version}"
		mainPublication jar

		relations {
			depends {
				curseforge = modrinth = "rhino"
			}
		}

		if (ENV.CURSEFORGE_KEY) {
			curseforge {
				token = ENV.CURSEFORGE_KEY
				id = project.curseforge_id
			}
		}

		if (ENV.MODRINTH_TOKEN) {
			modrinth {
				token = ENV.MODRINTH_TOKEN
				id = project.modrinth_id
				version = project.version
			}
		}
	}
}

idea {
	module {
		if (!CI) {
			downloadSources = true
			downloadJavadoc = true

			["client", "server"].each {
				[
						".architectury-transformer",
						"config",
						"crash-reports",
						"debug",
						"downloads",
						"dumps",
						"flashback",
						"local",
						"logs",
						"mods",
						"profilekeys",
						"saves",
						"voicechat_recordings",
						"command_history.txt",
						"options.txt",
						"server.properties",
						"world",
						"emi.json",
						"usercache.json",
						"usernamecache.json"
				].each { ext ->
					excludeDirs.add(file("runs/$it/$ext"))
				}
			}
		}
	}
}